tdf#161637 linguistic: fix apostrophe in spelling suggestions

Use the correct typographic (curly) apostrophe instead of the
obsolete straight (typewriter or ASCII) apostrophe.

Follow-up to commit e6fade1ce133039d28369751b77ac8faff6e40cb
"tdf#38395 enable smart apostrophe replacement by default" and
commit 8de1941fe61b461be617e1e88bb362bbd8315654
"tdf#150582 linguistic: fix always rejected words with U+2019 apostrophe".

Change-Id: Ic0e9aabcce7e95703601dd74e039f2838c89c769
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/169087
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>